consistent use of referring to section

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -120,7 +120,7 @@ The objectives of this chapter are to:
 
 ## Methods
 
-The choice of individuals, and preliminary data preparation for the selection data set is detailed in Section \@ref(selectionDataset). It consisted of combining 500 individuals (100 per population for each of \gls{nzm}, \gls{cim}, \gls{sam}, \gls{ton}, and \gls{nzc}) from the Genetics of Gout in Aotearoa study, who had been genoypted on the Illumina CoreExome v24 \gls{snp} array with 2504 individuals from the 1000 Genomes Project. 
+The choice of individuals, and preliminary data preparation for the selection data set is detailed in section \@ref(selectionDataset). It consisted of combining 500 individuals (100 per population for each of \gls{nzm}, \gls{cim}, \gls{sam}, \gls{ton}, and \gls{nzc}) from the Genetics of Gout in Aotearoa study, who had been genoypted on the Illumina CoreExome v24 \gls{snp} array with 2504 individuals from the 1000 Genomes Project. 
 
 <!-- The selection and neutrality statistics were calculated for individuals populations using a combination of two main software packages, PopGenome in R, and selectionTools v1.1. PopGenome was used to calculate the intra population frequency spectrum based tests for selection and neutrality. Haplotypic stats of \gls{ihs}, \gls{nsl}, and \gls{xpehh} were calculated using the selectionTools pipeline with significance set as being the 99th percentile for the absolute normalised score. Frequency based statistics were also generated such as \gls{daf} and F~ST~. -->
 
@@ -2059,7 +2059,7 @@ filterGenes <- c("ABHD6","ALPK2","APEH","ASAP1","AUH","BIN1","BRD2","C2","C2orf7
 
 #### Selection in Polynesian populations for genes associated with urate and metabolic disease 
 
-In order to establish if there was evidence of selection in genes associated with urate and diseases with \gls{hu} as a co-morbidity, loci that associated with these conditions were extracted from the \gls{gwas} catalog (as per Section \@ref(diseaselist), see Table \@ref(tab:gwascatref) for references for each trait) and neutrality and selection statistics that intersected these loci were collated. Table \@ref(tab:superDiseaseGenesTab) shows the break down of the number of different statistics by population that met the significance thresholds for the \gls{sfs} based statistics, the haplotype based statistics, and the overlap between the frequency spectrum and haplotypic methods. The \gls{cim} population had the least number of genes of the Polynesian populations that had a significant result out of the genes that were associated with urate. The Polynesian populations had the fewest number of genes with significant \gls{ihs} or \gls{nsl} for obesity and the Western Polynesian populations had the fewest number of genes for \gls{t2d}.
+In order to establish if there was evidence of selection in genes associated with urate and diseases with \gls{hu} as a co-morbidity, loci that associated with these conditions were extracted from the \gls{gwas} catalog (as per section \@ref(diseaselist), see Table \@ref(tab:gwascatref) for references for each trait) and neutrality and selection statistics that intersected these loci were collated. Table \@ref(tab:superDiseaseGenesTab) shows the break down of the number of different statistics by population that met the significance thresholds for the \gls{sfs} based statistics, the haplotype based statistics, and the overlap between the frequency spectrum and haplotypic methods. The \gls{cim} population had the least number of genes of the Polynesian populations that had a significant result out of the genes that were associated with urate. The Polynesian populations had the fewest number of genes with significant \gls{ihs} or \gls{nsl} for obesity and the Western Polynesian populations had the fewest number of genes for \gls{t2d}.
 
 Figure \@ref(fig:intraSelGenes) shows the genes associated with urate, gout and related diseases that had a significant marker with either \gls{ihs} or \gls{nsl} and also had a significant window from a \gls{sfs}-based statistic in at least one Polynesian population. There were only 10 genes that met this criteria, of which, the \gls{t2d} associated gene, _PTPRD_, was the only gene that met the criteria, and also had significant markers from all Polynesian populations in \gls{ihs}. The obesity-associated genes _GRID1_, _FHIT_, and _ERBB4_, all had windows from \gls{fwh} that were significant in all Polynesian populations. _ERBB4_ also had significant windows for all Polynesian populations for \gls{td}.
 
