--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -118,7 +118,7 @@ Admixture analysis was performed on the independent genetic markers for the sele
 
 ### Extended haplotype homozygosity {#haplocluster}
 
-For all \glspl{snp}, \gls{ihs} and \gls{nsl} were calculated and normalised using selscan v1.1.0b [@Szpiech2014] as part of the selectionTools 1.1 [@Cadzow2014] pipeline, as described in Section \@ref(selectionTools). Markers with an absolute \gls{ihs} or \gls{nsl} value greater than 2.6 met the significance threshold, and were clustered into genomic regions using the DBSCAN package v1.1.1 [@dbscanref] in R, where nearby \glspl{snp} were assigned the same group identifier. The search radius used was 200 kb and the minimum number of points for a cluster was one. Cluster regions were created by taking both the minimum and maximum position for each group identifier, population and chromosome. The distance matrix was the result of calculating (A $\cap$ B)/ A and (A $\cap$ B) / B, where A $\cap$ B was the sum of the intersection of clustered regions between population A and population B, and A and B was the sum of the clustered regions for population A and population B respectively. Hierarchical clustering was then performed, using complete linkage for the linkage criteria to create two sets of clusters (for an example see Figure \@ref(fig:ihsclust)).
+For all \glspl{snp}, \gls{ihs} and \gls{nsl} were calculated and normalised using selscan v1.1.0b [@Szpiech2014] as part of the selectionTools 1.1 [@Cadzow2014] pipeline, as described in section \@ref(selectionTools). Markers with an absolute \gls{ihs} or \gls{nsl} value greater than 2.6 met the significance threshold, and were clustered into genomic regions using the DBSCAN package v1.1.1 [@dbscanref] in R, where nearby \glspl{snp} were assigned the same group identifier. The search radius used was 200 kb and the minimum number of points for a cluster was one. Cluster regions were created by taking both the minimum and maximum position for each group identifier, population and chromosome. The distance matrix was the result of calculating (A $\cap$ B)/ A and (A $\cap$ B) / B, where A $\cap$ B was the sum of the intersection of clustered regions between population A and population B, and A and B was the sum of the clustered regions for population A and population B respectively. Hierarchical clustering was then performed, using complete linkage for the linkage criteria to create two sets of clusters (for an example see Figure \@ref(fig:ihsclust)).
 
 ### Pathway enrichment analysis
 
@@ -128,7 +128,7 @@ Pathway enrichment analysis was performed by taking genes that intersected the c
 
 ### Disease-associated genes
 
-Disease associated markers and their annotated genes were downloaded from the \gls{gwas} catalog^[https://www.ebi.ac.uk/gwas/ accessed 19 June 2017] [@MacArthur2017] and filtered for association (chi-squared P < 5x10^-8^). Gene lists were then created for each of the following diseases or traits; urate and gout, \gls{t2d}, obesity, kidney disease, and metabolic syndrome by filtering the study disease trait on keywords (see section \@ref(diseaselist) for details). Table \@ref(tab:gwascatref) shows source disease trait and reference used to create categories of gene lists for gout/urate, obesity, \gls{t2d}, kidney disease, and metabolic syndrome. Selection test statistics values for each population were centred using the population median. The gene lists from these categories were used in Section \@ref(genelistcluster) for hierarchical clustering using the selection test statistic values for windows that intersected these gene regions. Complete linkage and Euclidean distance were used for the clustering.
+Disease associated markers and their annotated genes were downloaded from the \gls{gwas} catalog^[https://www.ebi.ac.uk/gwas/ accessed 19 June 2017] [@MacArthur2017] and filtered for association (chi-squared P < 5x10^-8^). Gene lists were then created for each of the following diseases or traits; urate and gout, \gls{t2d}, obesity, kidney disease, and metabolic syndrome by filtering the study disease trait on keywords (see section \@ref(diseaselist) for details). Table \@ref(tab:gwascatref) shows source disease trait and reference used to create categories of gene lists for gout/urate, obesity, \gls{t2d}, kidney disease, and metabolic syndrome. Selection test statistics values for each population were centred using the population median. The gene lists from these categories were used in section \@ref(genelistcluster) for hierarchical clustering using the selection test statistic values for windows that intersected these gene regions. Complete linkage and Euclidean distance were used for the clustering.
 
 (ref:gwascataccess) https://www.ebi.ac.uk/gwas/, accessed 19 June 2017
 
@@ -1536,7 +1536,7 @@ names(kd) <- c('mat_d','prop')
 
 ```
 
-To assess if there was specificity of selection for the metabolic disease gene lists or if the population groupings could be obtained from any list of genes, clustering was performed using the actual statistic values for the genes. These values were median-centred to account for the population specific shifting of distributions which would have accounted for the majority of difference in the distance calculation. Gene lists were chosen for metabolic-related disease and compared to lists of random genes (Section \@ref(randomgenes)) to assess clustering specificity to metabolic disease.
+To assess if there was specificity of selection for the metabolic disease gene lists or if the population groupings could be obtained from any list of genes, clustering was performed using the actual statistic values for the genes. These values were median-centred to account for the population specific shifting of distributions which would have accounted for the majority of difference in the distance calculation. Gene lists were chosen for metabolic-related disease and compared to lists of random genes (section \@ref(randomgenes)) to assess clustering specificity to metabolic disease.
 
 
 
@@ -2389,7 +2389,7 @@ ze_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% select(contains(
 
 <!-- > Detection of selection on polygenic traits... -->
 
-The technical limitations of this dataset based on the markers from the CoreExome \gls{snp} array raised in Section \@ref(chap3limit) also apply to this analysis. Particular to the analysis in this chapter is how the clusters were determined. The \texttt{cutree} method implemented in R [@RCoreTeam2017] that was used to slice the dendrograms, creating the groups used to assess the proportions and exclusivity of the clustering was relatively crude and did not always agree with the clusters that were 'visually apparent' in the dendrogram, although 'visually apparent' could be partially attributed to confirmation bias. Hierarchical clustering was chosen as the clustering algorithm over K-means because the branching nature could be thought of as a metaphor for the population migration histories. It is also possible that different linkage and distance criteria for the clustering algorithm may have produced different clusters. However, a brief investigation of this, using each of the distance and linkage measures implemented by the \texttt{hclust} method in R indicated that any differences in clusters would likely be minor (data not shown).
+The technical limitations of this dataset based on the markers from the CoreExome \gls{snp} array raised in section \@ref(chap3limit) also apply to this analysis. Particular to the analysis in this chapter is how the clusters were determined. The \texttt{cutree} method implemented in R [@RCoreTeam2017] that was used to slice the dendrograms, creating the groups used to assess the proportions and exclusivity of the clustering was relatively crude and did not always agree with the clusters that were 'visually apparent' in the dendrogram, although 'visually apparent' could be partially attributed to confirmation bias. Hierarchical clustering was chosen as the clustering algorithm over K-means because the branching nature could be thought of as a metaphor for the population migration histories. It is also possible that different linkage and distance criteria for the clustering algorithm may have produced different clusters. However, a brief investigation of this, using each of the distance and linkage measures implemented by the \texttt{hclust} method in R indicated that any differences in clusters would likely be minor (data not shown).
 
 <!-- give this a test and might then might be able to "data not shown" -->
 
